# expressjs-blog

./: .git-assets  .gitignore  .gitmodules  .last_unit_tested_commit  .pnp.cjs  .puppeteerrc.cjs  .yarnrc.yml  Dockerfile  Dockerfile.dev  JenkinsFile  Jenkinsfile  Makefile  README.md  build  build-static.js  combine-css.js  config.example.toml  default.nix  deployment.example.lua  deployment.lua  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  ecosystem.config.js  eslint.config.js  example.env  favicon-shell.nix  flake.nix  manage.py  nodemon.json  package-lock.json  package.json  package.nix  pyproject.toml  requirements.txt  shell.nix  webpack.config.js  wireframe.ascii  wireframe.html  (+1 more)
.githooks/: post-push  post-receive  pre-commit  pre-push  pre-push copy  pre-receive  pre-receive copy  read_branches.sh
chart/: Chart.yaml  values.schema.json  values.yaml
config/: release.toml.example  testing.toml.example
content/: navLinks.json  package.json  presentation.yaml  resume.json  routes.js  techStack.json
data/: logs.sqlite3-shm  logs.sqlite3-wal  newsletter-emails.json
deployment/: README  __main__.py  main.py  prototype.py
nginx/: jasonpoage.com.conf.example
nixpkgs/: blog-engine.nix  bundle.nix  deb.nix  dependencies.nix  docker.nix  e2e-image.nix  express-blog.postinst  express-blog.service  yarnCache.nix
overlays/: deb-pkg.nix  dependencies.nix  docker.nix  electron.nix  wayland.electron.nix  xorg-electron.nix
posts/: error.md  example.md
public/: favicon-test.html  favicon.html  header.html  (+1 more)
(+521 files in other folders)
