[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "express-blog-deployment"
version = "0.1.0"
dependencies = [
    "deployment_pipeline @ git+ssh://git@git.jasonpoage.vpn:29418/jason/deployment_pipeline.git@6d8433152ebd9691dd58c089a9a66b2b5ac6c4a5",
    "pipeline_runner @ git+https://github.com/jpoage1/pipeline_runner.git@84288a6532b53a93c89d86e53e2bc44bb6be5010",
    "lupa>=2.6",
    "tomli>=2.4.0",
    "packaging>=25.0",
]

[project.optional-dependencies]
test = [
    "coverage==7.13.5",
    "hypothesis==6.151.10",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deployment*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/deployment/tests"]
python_files = ["test_*.py", "*_test.py"]
